feat: added movies infos + limited card style

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,24 @@
 @import '~bootstrap/scss/bootstrap';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#main-title {
+    padding: 20px;
+}
+
+#card-container {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 20px;
+    width: 100%;
+
+    .single-card {
+        padding: 20px;
+        width: calc(100% / 4 - 20px);
+        border: 1px solid blue;
+    }
+}
